assets/styles/index.css
/* Defaults */

*,
*:before,
*:after {
  box-sizing: border-box;
}

h1,
h2,
h3 {
  margin: 0;
}

html,
body {
  -webkit-font-smoothing: antialiased;
  background: #141414;
  color: #e5e5e5;
  font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu,
    sans-serif;
  font-size: 16px;
  line-height: 1.2;
  scroll-behavior: smooth;
}

/* Header & Nav */

.header {
  position: fixed;
  z-index: 9;
  top: 0;
  width: 100%;
  height: 68px;
  padding: 0 56px;
  background-color: #141414ff;
  background-image: linear-gradient(180deg, rgba(20, 20, 20, 1));
  display: flex;
  flex-wrap: nowrap;
  justify-content: flex-start;
  align-items: center;
  transition: 500ms background-color ease-in-out;
}

.header.transparent {
  background-color: #000;
}

.logo {
  margin: 0;
  padding: 0;
  margin-right: 25px;
}

.logo a,
.logo a:hover,
.logo a:active,
.logo a:visited {
  font-weight: 700;
  font-size: 24px;
  text-decoration: none;
  text-transform: uppercase;
  color: #e50914;
}

.logo img {
  height: 25px;
  background-size: contain;
}

.nav {
  padding: 0;
  margin: 0;
  width: 100%;
  list-style: none;
  display: flex;
  flex-wrap: nowrap;
  justify-content: flex-start;
  align-items: center;
}

.nav li {
  margin-left: 20px;
}

.nav a,
.nav a:hover,
.nav a:active,
.nav a:visited {
  font-size: 14px;
  line-height: 16px;
  text-decoration: none;
  color: #e5e5e5;
}

.nav a:hover {
  color: #b1b1b1;
}

.nav .right {
  margin-left: auto;
}

.nav .right a {
  padding: 8px 16px;
  background-color: #e50914;
  border-radius: 4px;
  color: #e5e5e5;
  font-weight: bold;
}

/* hero */

.hero {
    position: relative;
    width: 100%;
    height: 720px;
    margin-bottom: -120px;
    z-index: 0;
  }
  
  @keyframes flicker {
    0% {
      transform: translateY(1px);
    }
    100% {
      transform: translateY(0px);
    }
  }
  
  .hero .background-video-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%),
      linear-gradient(
        90deg,
        rgba(255, 0, 0, 0.06),
        rgba(0, 255, 0, 0.02),
        rgba(0, 0, 255, 0.06)
      );
    background-size: 100% 4px, 30px 100%;
    animation: flicker 100ms infinite;
    z-index: 1;
  }
  
  .hero .background-video-fade {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(
      transparent,
      rgba(20, 20, 20, 0) 0%,
      rgba(20, 20, 20, 1) 100%
    );
    z-index: 1;
  }
  
  .hero .background-video {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    padding: 0;
    object-fit: cover;
    opacity: 0.7;
    z-index: 0;
  }
  
  .hero .infos {
    display: flex;
    flex-wrap: nowrap;
    flex-direction: column;
    gap: 20px;
    position: relative;
    top: 100px;
    left: 56px;
    width: 520px;
    z-index: 1;
    justify-content: flex-end;
  }
  
  .hero .title {
    display: flex;
    justify-content: left;
    align-items: end;
    font-weight: 500;
    font-size: 56px;
    color: #e5e5e5;
    line-height: 72px;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.45);
    height: 240px;
  }
  
  .hero .title img {
    height: 100%;
    object-fit: contain;
  }
  
  .hero .description {
    font-size: 18px;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.45);
  }
  
  .hero .buttons {
    display: flex;
    flex-wrap: nowrap;
    flex-direction: row;
    gap: 15px;
    font-size: 18px;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.45);
  }
  
  .hero button {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 8px;
    border: none;
    border-radius: 8px;
    color: #fff;
    background-color: rgba(109, 109, 110, 0.7);
    padding: 12px 24px;
    font-size: 18px;
    cursor: pointer;
  }
  
  .hero button:hover {
    background-color: rgba(109, 109, 110, 0.4);
  }
  
  .hero button.primary {
    color: #000;
    background-color: #fff;
  }
  
  .hero button.primary:hover {
    background-color: rgba(255, 255, 255, 0.75);
  }
  
  .hero button .icon-info .icon-path {
    color: #fff;
  }
  
 
  

/* rows */

#row-continue {
  margin-top: -80px;
  z-index: 3;
}

.row {
    position: relative;
    margin: 238px 0;
    scroll-margin-top: 80px;
    margin-bottom: -210px;
}

.row-title {
  font-size: 20px;
  vertical-align: bottom;
  margin: 0 56px 0;
}

.row-container {
  position: relative;
  padding: 15px 0;
  max-width: 100%;
  margin: 0;
}

.row-wrapper {
  overflow-x: auto;
  -ms-overflow-style: none;
  scrollbar-width: none;
  margin: -20px 0;
  padding: 20px;
}

.row-wrapper::-webkit-scrollbar {
  display: none;
}

.row-items {
  width: fit-content;
  display: flex;
  flex-flow: row nowrap;
  gap: 15px;
  padding: 0 56px;
}

.row-item {
  width: 240px;
  height: 166px;
  border-radius: 8px;
  overflow: clip;
  color: #e5e5e5;
  text-decoration: none;
  outline-style: none;
  z-index: 0;
  transition: all 200ms ease-in-out;
}

.no-items {
  display: flex;
  padding: 56px;
  color: #737373;
  font-size: 20px;
  font-weight: 100;
  justify-content: center;
  align-items: center;
  margin: 0 56px;
  height: 166px;
  border: dashed 1px #737373;
  border-radius: 8px;
}

.row-card {
  position: relative;
  width: 100%;
  height: 100%;
  transform-style: preserve-3d;
  transition: 200ms all ease-in-out;
}

.row-current-item,
.row-item:focus {
  border: solid 2px #fff;
  transform: scale(1.1);
  z-index: 9;
  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.75);
}

.row-current-item .row-card,
.row-item:hover .row-card,
.row-item:focus .row-card {
  transform: rotateY(180deg);
}

.row-card-front,
.row-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
}

.row-card-front {
  display: flex;
  width: 100%;
  height: 100%;
  justify-content: center;
  align-items: center;
  object-fit: cover;
  padding: 16px;
}

.row-card-front .title {
  z-index: 1;
  font-weight: 900;
  font-size: 24px;
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.45);
}
.row-card-front img {
  position: absolute;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.row.top .row-card-front img {
  position: absolute;
  right: 0;
  width: 50%;
  border-radius: 8px;
  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.75);
  object-fit: cover;
}

.row.top .row-card-front::before {
  position: absolute;
  width: 50%;
  top: -30px;
  left: 16px;
  content: "#";
  font-size: 210px;
  line-height: 100%;
  font-weight: 700;
  letter-spacing: -30px;
  color: #000;
  text-shadow: -4px -4px 0 #595959, 0 -4px 0 #595959, 4px -4px 0 #595959, 4px 0 0 #595959, 4px 4px 0 #595959, 0 4px 0 #595959, -4px 4px 0 #595959, -4px 0 0 #595959;
}

.row.top .row-item:nth-child(1) .row-card-front::before { content: "1"; }
.row.top .row-item:nth-child(2) .row-card-front::before { content: "2"; }
.row.top .row-item:nth-child(3) .row-card-front::before { content: "3"; }
.row.top .row-item:nth-child(4) .row-card-front::before { content: "4"; }
.row.top .row-item:nth-child(5) .row-card-front::before { content: "5"; }
.row.top .row-item:nth-child(6) .row-card-front::before { content: "6"; }
.row.top .row-item:nth-child(7) .row-card-front::before { content: "7"; }
.row.top .row-item:nth-child(8) .row-card-front::before { content: "8"; }
.row.top .row-item:nth-child(9) .row-card-front::before { content: "9"; }
.row.top .row-item:nth-child(10) .row-card-front::before { content: "10"; left: -16px; }

.row-card-back {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: start;
  transform: rotateY(180deg);
  padding: 16px;
  background-color: #000;
}

.row-card-back .title {
  display: block;
  display: -webkit-box;
  font-size: 16px;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
}

.row-card-back .description {
  display: -webkit-box;
  font-size: 12px;
  line-height: 16px;
  -webkit-line-clamp: 6;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
}

/* row controls */

.row-control {
  position: absolute;
  top: 0;
  bottom: 0;
  font-size: 40px;
  line-height: 100%;
  width: 60px;
  text-align: center;
  color: #fff;
  border: none;
  opacity: 0.5;
  transition: all 200ms ease-in-out;
}

.row:hover .row-control {
  opacity: 1;
}

.row-control:hover {
  opacity: 1;
  cursor: pointer;
  transform: scale(1.1);
}

.row-arrow-left {
  left: 0;
  background: linear-gradient(to left, transparent 0%, black 200%);
}

.row-arrow-right {
  right: 0;
  background: linear-gradient(to right, transparent 0%, black 200%);
}

.row-arrow-left:hover,
.row-arrow-right:hover {
  background: #141414cc;
}

/* footer */

.footer {
  background-color: #000;
  border-top: 2px solid #e50914;
  padding: 38px;
  margin-top: 218px;
  font-size: 11px;
  color: #737373;
}

/* Estilos para o botão do menu hambúrguer */
.hamburger {
    display: none;
    font-size: 24px;
    background: none;
    border: none;
    color: #e5e5e5;
    cursor: pointer;
    position: absolute;
    top: 20px;
    right: 56px;
    z-index: 10;
  }
  
  /* Esconder o menu no celular por padrão */
  .nav {
    display: flex;
    flex-wrap: nowrap;
  }
  
  @media (max-width: 768px) {
    .hamburger {
      display: block;
    }
    
    .nav {
      display: none;
      flex-direction: column;
      width: 100%;
      position: absolute;
      top: 68px;
      left: 0;
      background-color: #000;
    }
    
    .nav.active {
        display: flex;
        justify-content: center;
        align-items: flex-start;
        padding: 32px;
    }
    
    .nav li {
      margin: 10px 0;
      text-align: center;
    }
    .hero {
        height: 400px;
      }
    
      .hero .infos {
        top: 50px;
        left: 20px;
        width: calc(100% - 40px);
      }
    
      .hero .title {
        font-size: 28px;
        line-height: 36px;
      }
    
      .hero .title img {
        height: 120px;
      }
    
      .hero .description {
        font-size: 14px;
      }
    
      .hero .buttons {
        flex-direction: column;
        gap: 10px;
      }
    
      .hero button {
        font-size: 14px;
        padding: 10px 20px;
      }
      .nav .right {
        margin-right: auto;
      }      
  }
  
@media (min-width: 80em) {
    .row {
        margin: 20px 0;
        scroll-margin-top: 80px;
        margin-bottom: 56px;
      }
      .footer {
        background-color: #000;
        border-top: 2px solid #e50914;
        padding: 56px;
        margin-top: 120px;
        font-size: 11px;
        color: #737373;
      }
        
  .hero .title {
    align-items: center;
  }
  .header.transparent {
    background-color: #14141400;
    background-image: linear-gradient(
      180deg,
      rgba(0, 0, 0, 0.7) 10%,
      transparent
    );
  }
}

